# libOKC

./: CMakeLists.txt  main.cpp
src/: okc.h  okc_differential_types.h  okc_link.h  okc_math.h  okc_system.h  okc_types.h
